<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
<TextView
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/log"
    android:textSize="35dp"
    android:textColor="@color/white"
    android:layout_margin="50dp"
    android:textStyle="bold"
    android:gravity="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="E-mail"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:background="#30ffffff"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="Login" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/teal_200"
        android:text="Sign in" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_btn"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forg"
        android:textColor="@color/white"
        android:textSize="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/or_sign_in"
        android:layout_above="@id/social_icons"
        android:textColor="@color/white"
        android:text="@string/social"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:id="@+id/social_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <ImageView
            android:id="@+id/facebook"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb_icon"/>
        <ImageView
            android:id="@+id/google"
            android:layout_width="45dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google_icon"/>
        <ImageView
            android:id="@+id/twitter"
            android:layout_width="45dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter_icon"/>

    </LinearLayout>

</RelativeLayout>